- Upgraded JSch from 0.1.54 to 0.1.55 - Generating RSA instead of DSA keys (DSA wasn't accepted by OpenSSH servers). - Created an action to load the contents of a remote file as a String. - Introduced View Contents within the Explorer. - Styling to obtain the pubkey in a proper manner. - Removed dependency on Xerxes as mentioned by Marcus Groen (see issue #1).